--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "framer-motion": "^11.2.11",
     "lucide-react": "^0.396.0",
     "next": "14.2.4",
+    "next-sanity": "^9.4.2",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
